test
[silver@test t5_automation]$ ls
Python-3.9.18  Python-3.9.18.tgz  t5_wizard.py
[silver@test t5_automation]$ python3 t5_wizard.py
  File "t5_wizard.py", line 26
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
[silver@test t5_automation]$ 
